--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -4,24 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exploratory Data Analysis (EDA) and Data Cleaning"
+    "# Exploratory Data Analysis and Data Cleaning"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EDA"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The data we obtained from XXXX came in the form of XXXX many .wav files of varying lengths, with an accompanying metadata .csv file containing the following information:\n",
-    "- Biological classification (genus, species).\n",
-    "- Recording information (recordist, date, apparatus used, geographical location, background species, etc.).\n",
-    "(The `librosa` package for audio processing and visualisation is used throughout our work. See https://librosa.org/doc/latest/index.html# for more information.)"
+    "The `librosa` package for audio processing and visualisation is used throughout our work. See https://librosa.org/doc/latest/index.html# for more information."
    ]
   },
   {
@@ -42,7 +32,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Many of the files contained a human speech component at the beginning (the recordist or scientist stating the catalogue number of the recording, for instance). We used the following code to extract the second non-silent chunk of each audio file, which typically contained a useful section of the insect sound recording."
+    "## Metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data we obtained from XXXX came in the form of 12602 many .wav files of varying lengths, with an accompanying metadata .csv file containing the following information:\n",
+    "- Biological classification (genus, species).\n",
+    "- Recording information (recordist, date, apparatus used, geographical location, etc.).\n",
+    "\n",
+    "To make the biological information more comprehensive, we added information on subfamilies(??) and families (??) to the metadata file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(Add stuff from adding_fam_or_subfam.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Removing Human Speech"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Many of the files contained a human speech component at the beginning (the recordist or cataloguing scientist stating the index number of the recording, for instance). We used the following code to extract the second non-silent chunk of each audio file, which typically contained a useful section of the insect sound recording."
    ]
   },
   {
@@ -136,14 +158,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Out of the 12602 audio files remaining after `remove_Talking` was applied, this reduced the size of our data set to 6122."
+    "Out of the 12602 audio files remaining after `remove_Talking` was applied, this reduced the size of our data set to 6122. The final data set used in training and testing the model is `no_voice_files.csv`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Cleaning"
+    "## Data Visualisation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(Fill in librosa plotting code.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reducing Background Noise"
    ]
   },
   {
@@ -165,6 +201,63 @@
     "    D=D[64:]\n",
     "    return D"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Extraction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(Fill in science-y stuff about MFCCs and LFCCs and why we use them.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following code extracts MFCCs from the audio files used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_voice_list = pd.read_csv('no_voice_files.csv', header=None)\n",
+    "filename_list = [name.split(\"\\\\\")[-1] for name in no_voice_list[0]]\n",
+    "\n",
+    "df = pd.read_csv('MLNS_Insects_Fams_05212024.csv')\n",
+    "\n",
+    "#This creates the new CSV with mfcc coefficients and f_min cuttoff = 800. Ignores files with length < .5 seconds. No need to run since the csv is now in the git!\n",
+    "ct = 0\n",
+    "n= 40\n",
+    "for name in filename_list:\n",
+    "    \n",
+    "    #change this file path to the chirp_bucket_2 folder\n",
+    "    file_path = '../../../chirp/'+name\n",
+    "    song, sr = librosa.load(file_path)\n",
+    "    if song.shape[0] > sr/2:\n",
+    "        lib = librosa.feature.mfcc(y=song, sr=sr, fmin = 800, n_mfcc=n)\n",
+    "        for i in range(0,n):\n",
+    "            df.at[df.loc[df['cat_num']==int(name[:-4])].index[0], 'mfcc_'+str(i)+'_avg'] = lib[i].mean()\n",
+    "            df.at[df.loc[df['cat_num']==int(name[:-4])].index[0], 'mfcc_'+str(i)+'_var'] = lib[i].var()\n",
+    "           # df['mfcc_'+str(i)+'_avg']=lib[i].mean()\n",
+    "           # df['mfcc_'+str(i)+'_var']=lib[i].var()\n",
+    "        ct+=1\n",
+    "        if ct % 100 == 0:\n",
+    "            df.to_csv(\"MLNS_with_mfcc_stats_800_cutoff_05272024.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
