--- a/MFCC_avg_var_FFNN.ipynb
+++ b/MFCC_avg_var_FFNN.ipynb
@@ -19,7 +19,8 @@
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import r2_score"
    ]
   },
   {
