--- a/Robert_Testing.ipynb
+++ b/Robert_Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 101,
    "id": "5924c4f7-2974-4f09-a3f8-c5c2e3121b5b",
    "metadata": {},
    "outputs": [],
@@ -21,12 +21,15 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.svm import SVC"
+    "from sklearn.svm import SVC\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.cross_decomposition import PLSRegression\n",
+    "from sklearn.metrics import r2_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 112,
    "id": "2a6c99f1-e21d-4b2e-a8d1-8e7cc1156cc1",
    "metadata": {},
    "outputs": [
@@ -34,7 +37,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5z/7fkzpcz93gz6mqgh9vjgfymm0000gn/T/ipykernel_6152/259242732.py:1: DtypeWarning: Columns (25,31) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/5z/7fkzpcz93gz6mqgh9vjgfymm0000gn/T/ipykernel_13337/259242732.py:1: DtypeWarning: Columns (25,31) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('MLNS_05292024.csv')\n"
      ]
     }
@@ -45,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 113,
    "id": "65763d53-759e-4eb4-ac5c-dc30d82f7f38",
    "metadata": {},
    "outputs": [],
@@ -73,7 +76,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 114,
+   "id": "dae4079f-42f7-474b-9893-2efd64c82b39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fam_to_num(ser):\n",
+    "    temp = pd.DataFrame(0, index=np.arange(len(ser)), columns=['Gryllinae', 'Conocephalinae', 'Oecanthinae',\n",
+    "            'Phaneropterinae', 'Trigonidiinae', 'Nemobiinae', 'Hapithinae', \n",
+    "            'Mogoplistinae', 'Tettigoniinae', 'Pseudophyllinae', 'Cicadidae',\n",
+    "            'Gryllotalpidae', 'Eneopterinae', 'Phalangopsidae', 'Listroscelidinae'])\n",
+    "    for i in range(0,len(ser)):\n",
+    "        temp.at[i,ser[i]] = 1\n",
+    "    return temp   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "id": "51982133-2676-4cf9-9076-bae4f68a2630",
    "metadata": {},
    "outputs": [],
@@ -161,12 +181,22 @@
     "    return X\n",
     "\n",
     "def fam_to_crit_string(fam_name):\n",
-    "    return fam_dict[fam_name]"
+    "    return fam_dict[fam_name]\n",
+    "\n",
+    "def plsr_test_acc(df, n_components=2):\n",
+    "    X=truncate_mfcc(df=df, avg_depth=40,var_depth=40,hs_avg_depth=40,hs_var_depth=40,calvin_Features=True,peak = True)\n",
+    "    Y= fam_to_num(df['fam_or_subfam'])\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X.copy(), Y, shuffle=True, random_state=17, test_size=.2, stratify=Y)\n",
+    "    knn_pipe = Pipeline([('scale', StandardScaler()), ('plsr',PLSRegression(n_components=n_components, scale=False))])\n",
+    "    knn_pipe.fit(X_train, y_train)\n",
+    "    pred = knn_pipe.predict(X_test)\n",
+    "    plsr_coef = knn_pipe['plsr'].coef_\n",
+    "    return plsr_coef,pred, y_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 121,
    "id": "0e2021c0-e221-4d67-92d4-490f0d970247",
    "metadata": {},
    "outputs": [
@@ -174,59 +204,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "knn Test Accuracy when mfcc depth = 12 and k = 1: 0.8923728813559322\n",
-      "knn Test Accuracy when mfcc depth = 12 and k = 2: 0.9\n",
-      "knn Test Accuracy when mfcc depth = 12 and k = 3: 0.9059322033898305\n",
-      "knn Test Accuracy when mfcc depth = 12 and k = 4: 0.9033898305084745\n",
-      "knn Test Accuracy when mfcc depth = 12 and k = 5: 0.8983050847457628\n",
-      "knn Test Accuracy when mfcc depth = 12 and k = 6: 0.8957627118644068\n",
-      "knn Test Accuracy when mfcc depth = 12 and k = 7: 0.9\n",
-      "knn Test Accuracy when mfcc depth = 12 and k = 8: 0.8940677966101694\n",
-      "knn Test Accuracy when mfcc depth = 12 and k = 9: 0.8974576271186441\n",
-      "knn Test Accuracy when mfcc depth = 12 and k = 10: 0.8949152542372881\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 1: 0.8983050847457628\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 2: 0.8915254237288136\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 3: 0.9008474576271186\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 4: 0.9033898305084745\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 5: 0.8949152542372881\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 6: 0.8974576271186441\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 7: 0.8991525423728813\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 8: 0.8966101694915254\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 9: 0.8983050847457628\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 10: 0.8932203389830509\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 1: 0.8991525423728813\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 2: 0.888135593220339\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 3: 0.8957627118644068\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 4: 0.8991525423728813\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 5: 0.8949152542372881\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 6: 0.9\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 7: 0.8991525423728813\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 8: 0.8974576271186441\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 9: 0.8991525423728813\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 10: 0.8974576271186441\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 1: 0.902542372881356\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 2: 0.8983050847457628\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 3: 0.8983050847457628\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 4: 0.8940677966101694\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 5: 0.8898305084745762\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 6: 0.8991525423728813\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 7: 0.8974576271186441\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 8: 0.8991525423728813\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 9: 0.8966101694915254\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 10: 0.8991525423728813\n"
+      "knn Test Accuracy when mfcc depth = 12 and k = 10: 0.6330508474576271\n"
      ]
     }
    ],
    "source": [
     "#Runs knn over the indicated depth of all 4 mfcc features, Calvin's features, and peak_freq, and the values of k for knn.\n",
-    "for depth in range(12,16):\n",
-    "    for k in range(1,11):\n",
+    "for depth in range(12,13):\n",
+    "    for k in range(10,11):\n",
     "        print(f\"knn Test Accuracy when mfcc depth = {depth} and k = {k}: {knn_test_acc(df,k,depth,depth,depth,depth,True,True,False)}\")        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 122,
    "id": "8361d2bc-22d5-49dc-ba47-46f66df6c288",
    "metadata": {},
    "outputs": [
@@ -255,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 123,
    "id": "ae1cba2d-461f-4ad6-81d1-ce6fb05086a6",
    "metadata": {},
    "outputs": [
@@ -263,24 +254,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVC rbf Test Accuracy when mfcc depth = 10 and C = 10: 0.6813559322033899\n",
-      "SVC rbf Train Accuracy when mfcc depth = 10 and C = 10: 0.8889595253231617\n",
-      "SVC rbf Test Accuracy when mfcc depth = 11 and C = 10: 0.6923728813559322\n",
-      "SVC rbf Train Accuracy when mfcc depth = 11 and C = 10: 0.8953168044077136\n"
+      "SVC rbf Test Accuracy when mfcc depth = 40 and C = 10: 0.7025423728813559\n",
+      "SVC rbf Train Accuracy when mfcc depth = 40 and C = 10: 0.9684255138800594\n"
      ]
     }
    ],
    "source": [
     "#Runs svc rbf over the indicated C and depth of all 4 mfcc features, including Calvin's features and peak_freq\n",
     "for C in range(10,11):\n",
-    "    for depth in range(10,12):\n",
+    "    for depth in range(40,41):\n",
     "        print(f\"SVC rbf Test Accuracy when mfcc depth = {depth} and C = {C}: {SVC_rbf_test_acc(df,C,depth,depth,0,0,True,True,False)}\")\n",
     "        print(f\"SVC rbf Train Accuracy when mfcc depth = {depth} and C = {C}: {SVC_rbf_train_acc(df,C,depth,depth,0,0,True,True,False)}\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 124,
    "id": "8bfeb69e-6100-424c-901e-bc77dfc26685",
    "metadata": {},
    "outputs": [
@@ -288,24 +277,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVC rbf Test Accuracy when mfcc depth = 10 and C = 10: 0.6423728813559322\n",
-      "SVC rbf Train Accuracy when mfcc depth = 10 and C = 10: 0.8554778554778555\n",
-      "SVC rbf Test Accuracy when mfcc depth = 11 and C = 10: 0.6610169491525424\n",
-      "SVC rbf Train Accuracy when mfcc depth = 11 and C = 10: 0.8679805043441408\n"
+      "SVC rbf Test Accuracy when mfcc depth = 40 and C = 10: 0.6364406779661017\n",
+      "SVC rbf Train Accuracy when mfcc depth = 40 and C = 10: 0.9841068022886205\n"
      ]
     }
    ],
    "source": [
     "#Runs svc rbf over the indicated C and depth of all 4 mfcc features, including Calvin's features and peak_freq\n",
     "for C in range(10,11):\n",
-    "    for depth in range(10,12):\n",
+    "    for depth in range(40,41):\n",
     "        print(f\"SVC rbf Test Accuracy when mfcc depth = {depth} and C = {C}: {SVC_rbf_test_acc(df,C,0,0,depth,depth,True,True,False)}\")\n",
     "        print(f\"SVC rbf Train Accuracy when mfcc depth = {depth} and C = {C}: {SVC_rbf_train_acc(df,C,0,0,depth,depth,True,True,False)}\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 125,
    "id": "17fc5581-dc26-4be7-ad22-718cb4323708",
    "metadata": {},
    "outputs": [
@@ -313,24 +300,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVC rbf Test Accuracy when mfcc depth = 10 and C = 10: 0.6932203389830508\n",
-      "SVC rbf Train Accuracy when mfcc depth = 10 and C = 10: 0.9146005509641874\n",
-      "SVC rbf Test Accuracy when mfcc depth = 11 and C = 10: 0.6889830508474576\n",
-      "SVC rbf Train Accuracy when mfcc depth = 11 and C = 10: 0.9226531044712863\n"
+      "SVC rbf Test Accuracy when mfcc depth = 40 and C = 10: 0.6923728813559322\n",
+      "SVC rbf Train Accuracy when mfcc depth = 40 and C = 10: 0.9885568976478067\n"
      ]
     }
    ],
    "source": [
     "#Runs svc rbf over the indicated C and depth of all 4 mfcc features, including Calvin's features and peak_freq\n",
     "for C in range(10,11):\n",
-    "    for depth in range(10,12):\n",
+    "    for depth in range(40,41):\n",
     "        print(f\"SVC rbf Test Accuracy when mfcc depth = {depth} and C = {C}: {SVC_rbf_test_acc(df,C,depth,depth,depth,depth,True,True,False)}\")\n",
     "        print(f\"SVC rbf Train Accuracy when mfcc depth = {depth} and C = {C}: {SVC_rbf_train_acc(df,C,depth,depth,depth,depth,True,True,False)}\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 126,
    "id": "c2a2f9a8-c0c9-4f07-bd66-def7117d0292",
    "metadata": {},
    "outputs": [
@@ -338,30 +323,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVC rbf Test Accuracy (train fam_or_subfam, predict crit_name) when mfcc depth = 10 and C = 10: 0.9211864406779661\n",
-      "SVC rbf Test Accuracy (train fam_or_subfam, predict crit_name) when mfcc depth = 11 and C = 10: 0.9161016949152543\n",
-      "SVC rbf Test Accuracy (train fam_or_subfam, predict crit_name) when mfcc depth = 12 and C = 10: 0.9296610169491526\n",
-      "SVC rbf Test Accuracy (train fam_or_subfam, predict crit_name) when mfcc depth = 13 and C = 10: 0.9245762711864407\n",
-      "SVC rbf Test Accuracy (train fam_or_subfam, predict crit_name) when mfcc depth = 14 and C = 10: 0.9245762711864407\n",
-      "SVC rbf Test Accuracy (train fam_or_subfam, predict crit_name) when mfcc depth = 15 and C = 10: 0.9313559322033899\n",
-      "SVC rbf Test Accuracy (train fam_or_subfam, predict crit_name) when mfcc depth = 16 and C = 10: 0.9296610169491526\n",
-      "SVC rbf Test Accuracy (train fam_or_subfam, predict crit_name) when mfcc depth = 17 and C = 10: 0.926271186440678\n",
-      "SVC rbf Test Accuracy (train fam_or_subfam, predict crit_name) when mfcc depth = 18 and C = 10: 0.9271186440677966\n",
-      "SVC rbf Test Accuracy (train fam_or_subfam, predict crit_name) when mfcc depth = 19 and C = 10: 0.9279661016949152\n"
+      "SVC rbf Test Accuracy (train fam_or_subfam, predict crit_name) when mfcc depth = 10 and C = 10: 0.9211864406779661\n"
      ]
     }
    ],
    "source": [
     "#Runs svc rbf on fam_or_subfam over the indicated C and depth of all 4 mfcc features, including Calvin's features and peak_freq, but then predicting only critter_name\n",
     "for C in range(10,11):\n",
-    "    for depth in range(10,20):\n",
+    "    for depth in range(10,11):\n",
     "        print(f\"SVC rbf Test Accuracy (train fam_or_subfam, predict crit_name) when mfcc depth = {depth} and C = {C}: {SVC_rbf_test_acc_on_crit(df,C,depth,depth,depth,depth,True,True,False)}\") "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26f4b111-7d43-4fdb-8bc1-d209c67a8dd1",
+   "id": "8a8a644d-fd19-4f81-aac0-b5ded17b3ea2",
    "metadata": {},
    "outputs": [],
    "source": []
