--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data we obtained from XXXX came in the form of 12602 many .wav files of varying lengths, with an accompanying metadata .csv file containing the following information:\n",
+    "The data we obtained from XXXX came in the form of 12602 .wav files of varying lengths, with an accompanying metadata .csv file containing the following information:\n",
     "- Biological classification (genus, species).\n",
     "- Recording information (recordist, date, apparatus used, geographical location, etc.).\n",
     "\n",
