--- a/FeedingData.ipynb
+++ b/FeedingData.ipynb
@@ -274,12 +274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "39b5e89e-718b-43e0-a037-14d0076c1f60",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_periods(song, cutoff = 800):\n",
+    "#should rename to chirp frequencies instead of periods\n",
+    "def get_periods(song, cutoff = 800, tsps = 44):\n",
+    "    #tsps is time stamps per second\n",
     "    D = np.abs(librosa.stft(song, n_fft=n_fft,  hop_length=hop_length))\n",
     "    cut = int(float(cutoff)/(librosa.fft_frequencies()[1]))\n",
     "    D = D[cut:]\n",
@@ -295,13 +297,14 @@
     "    scaled_fft = scaler.fit_transform((fft2.T).reshape(-1,1))\n",
     "\n",
     "    #bucket together close by periods to make data smaller. I'm kinda arbitrarily squaring to make more prevalent periods noticed\n",
-    "    buckets = np.zeros((36))\n",
-    "    counter = np.zeros((36))\n",
-    "    mini = min(data.shape[0],int(3*time/10 -3))\n",
+    "    buckets = np.zeros((48))\n",
+    "    counter = np.zeros((48))\n",
+    "    mini = min(data.shape[0],int(8*time/tsps -3))\n",
     "    for i in range(0,mini):\n",
-    "        bucket_num = int((i+2)/time*20*60/10)\n",
-    "        if data[i]>0:\n",
-    "            buckets[bucket_num] = buckets[bucket_num] + np.square(data[i])\n",
+    "        #44 is the number of time samples per second\n",
+    "        bucket_num = int((i+2)/time*tsps*60/10)\n",
+    "        if scaled_fft[i]>0:\n",
+    "            buckets[bucket_num] = buckets[bucket_num] + np.square(scaled_fft[i,0])\n",
     "        counter[bucket_num] = counter[bucket_num]+1\n",
     "    for j in range(0,36):\n",
     "        if buckets[j]>0:\n",
@@ -309,6 +312,14 @@
     "\n",
     "    return buckets"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d9210e6-c230-4037-aec0-5e999f78d7a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -327,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
