new csv with periods

--- a/KNN_Robert.ipynb
+++ b/KNN_Robert.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "e3df4c2a-2429-4fbe-ba37-b33764db25ad",
    "metadata": {},
    "outputs": [],
@@ -35,24 +35,16 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.cross_decomposition import PLSRegression\n",
     "from sklearn.metrics import r2_score\n",
-    "from sklearn.decomposition import TruncatedSVD"
+    "from sklearn.decomposition import TruncatedSVD\n",
+    "from sklearn.metrics import confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "45a5a0aa-a527-4931-8ec7-eb8348f37711",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/5z/7fkzpcz93gz6mqgh9vjgfymm0000gn/T/ipykernel_34325/2048960066.py:2: DtypeWarning: Columns (25,31) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df_all = pd.read_csv('MLNS_05292024.csv')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Import the data file containing all features and classifications\n",
     "df_all = pd.read_csv('MLNS_05292024.csv')"
@@ -60,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "25453ccd-c647-48f1-819a-a8edd8d67e17",
    "metadata": {},
    "outputs": [],
@@ -71,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "4115bf1c-d33f-45e0-a9c2-6f746e2a3a84",
    "metadata": {},
    "outputs": [],
@@ -99,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "id": "5e64649d-c4b2-4614-bb3b-324446235b6d",
    "metadata": {},
    "outputs": [],
@@ -282,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "id": "9b99d0e6-a4a1-4bdb-b8ee-b76dc8b05d4e",
    "metadata": {},
    "outputs": [
@@ -292,7 +284,7 @@
        "0.6203389830508474"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "5ba4898b-d85a-4de5-b496-5fddce06a30f",
    "metadata": {},
    "outputs": [],
@@ -346,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "id": "0f13b14f-2060-49e8-8724-fcb134265731",
    "metadata": {},
    "outputs": [
@@ -356,7 +348,7 @@
        "0.8694915254237288"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,8 +367,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "655b2360-ff7d-41d8-85e5-ecbf48b30567",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf_mat = confusion_matrix(fam_to_crit(pd.Series(list(y_test))), fam_to_crit(pd.Series(pred)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "032fb058-9ce6-4e34-ba4f-a14be2853037",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted cicada</th>\n",
+       "      <th>Predicted cricket</th>\n",
+       "      <th>Predicted kaydid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual cicada</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual cricket</th>\n",
+       "      <td>5</td>\n",
+       "      <td>684</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual kaydid</th>\n",
+       "      <td>2</td>\n",
+       "      <td>37</td>\n",
+       "      <td>341</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Predicted cicada  Predicted cricket  Predicted kaydid\n",
+       "Actual cicada                  1                  4                 6\n",
+       "Actual cricket                 5                684               100\n",
+       "Actual kaydid                  2                 37               341"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(conf_mat,\n",
+    "                 columns = ['Predicted cicada', 'Predicted cricket', 'Predicted kaydid'],\n",
+    "                 index = ['Actual cicada', 'Actual cricket', 'Actual kaydid'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48a89889-070f-454d-8778-9c65dcb9b31e",
    "metadata": {},
    "outputs": [],
    "source": []
