--- a/MFCC_avg_var_FFNN.ipynb
+++ b/MFCC_avg_var_FFNN.ipynb
@@ -25,6 +25,202 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "95028515-9693-427a-b7e4-d9773176bf50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('MLNS_05292024.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b0138faa-b80c-4957-84ce-7f96cea3ef9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_periods(song, cutoff = 800, tsps = 44):\n",
+    "    #tsps is time stamps per second\n",
+    "    D = np.abs(librosa.stft(song, n_fft=n_fft,  hop_length=hop_length))\n",
+    "    cut = int(float(cutoff)/(librosa.fft_frequencies()[1]))\n",
+    "    D = D[cut:]\n",
+    "    #perform fft on the volume of the noise\n",
+    "    data = D.sum(axis=0)\n",
+    "    time =  D.shape[1]\n",
+    "    halftime = int(time/2)\n",
+    "    data2 = data- data.mean()\n",
+    "    fft = np.absolute(scipy.fft.fft(data2))\n",
+    "    fft2 = fft[2:halftime]\n",
+    "    scaler = StandardScaler()\n",
+    "    scaled_fft = scaler.fit_transform((fft2.T).reshape(-1,1))\n",
+    "    #bucket together close by periods to make data smaller. I'm kinda arbitrarily squaring to make more prevalent periods noticed\n",
+    "    buckets = np.zeros((40))\n",
+    "    counter = np.zeros((40))\n",
+    "    mini = min(data.shape[0],int(40/6*time/tsps -3))\n",
+    "    for i in range(0,mini):\n",
+    "        #44 is the number of time samples per second\n",
+    "        bucket_num = int((i+2)/time*tsps*60/12)\n",
+    "        if scaled_fft[i]>0:\n",
+    "            buckets[bucket_num] = buckets[bucket_num] + np.square(scaled_fft[i,0])\n",
+    "        counter[bucket_num] = counter[bucket_num]+1\n",
+    "    for j in range(0,40):\n",
+    "        if buckets[j]>0:\n",
+    "            buckets[j] = buckets[j]/counter[j]\n",
+    "    return buckets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d8cfb233-6c24-4d39-b298-28fc1bc80c8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 40 is out of bounds for axis 0 with size 40",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 33\u001b[0m\n\u001b[1;32m     30\u001b[0m             buckets[j] \u001b[38;5;241m=\u001b[39m buckets[j]\u001b[38;5;241m/\u001b[39mcounter[j]\n\u001b[1;32m     31\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m buckets\n\u001b[0;32m---> 33\u001b[0m \u001b[43mget_periods\u001b[49m\u001b[43m(\u001b[49m\u001b[43msong\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m40\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 40 is out of bounds for axis 0 with size 40"
+     ]
+    }
+   ],
+   "source": [
+    "file_path = '../../../chirp/110325.wav'\n",
+    "song, sr = librosa.load(file_path)\n",
+    "\n",
+    "def get_periods(song, cutoff = 800, tsps = 44):\n",
+    "    #tsps is time stamps per second\n",
+    "    D = np.abs(librosa.stft(song))\n",
+    "    cut = int(float(cutoff)/(librosa.fft_frequencies()[1]))\n",
+    "    D = D[cut:]\n",
+    "    #perform fft on the volume of the noise\n",
+    "    data = D.sum(axis=0)\n",
+    "    time =  D.shape[1]\n",
+    "    halftime = int(time/2)\n",
+    "    data2 = data- data.mean()\n",
+    "    fft = np.absolute(scipy.fft.fft(data2))\n",
+    "    fft2 = fft[2:halftime]\n",
+    "    scaler = StandardScaler()\n",
+    "    scaled_fft = scaler.fit_transform((fft2.T).reshape(-1,1))\n",
+    "    #bucket together close by periods to make data smaller. I'm kinda arbitrarily squaring to make more prevalent periods noticed\n",
+    "    buckets = np.zeros((40))\n",
+    "    counter = np.zeros((40))\n",
+    "    mini = min(data.shape[0],int(40/6*time/tsps -3))\n",
+    "    for i in range(0,mini):\n",
+    "        #44 is the number of time samples per second\n",
+    "        bucket_num = int((i+2)/time*tsps*60/12)\n",
+    "        if scaled_fft[i]>0:\n",
+    "            buckets[bucket_num] = buckets[bucket_num] + np.square(scaled_fft[i,0])\n",
+    "        counter[bucket_num] = counter[bucket_num]+1\n",
+    "    for j in range(0,40):\n",
+    "        if buckets[j]>0:\n",
+    "            buckets[j] = buckets[j]/counter[j]\n",
+    "    return buckets\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0f090aa1-b8fe-4765-bd8e-4381e5cac964",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"MLNS_05302024.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7f476896-1eef-47da-8750-1988a4c467e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "200\n",
+      "300\n",
+      "400\n",
+      "500\n",
+      "600\n",
+      "700\n",
+      "800\n",
+      "900\n",
+      "1000\n",
+      "1100\n",
+      "1200\n",
+      "1300\n",
+      "1400\n",
+      "1500\n",
+      "1600\n",
+      "1700\n",
+      "1800\n",
+      "1900\n",
+      "2000\n",
+      "2100\n",
+      "2200\n",
+      "2300\n",
+      "2400\n",
+      "2500\n",
+      "2600\n",
+      "2700\n",
+      "2800\n",
+      "2900\n",
+      "3000\n",
+      "3100\n",
+      "3200\n",
+      "3300\n",
+      "3400\n",
+      "3500\n",
+      "3600\n",
+      "3700\n",
+      "3800\n",
+      "3900\n",
+      "4000\n",
+      "4100\n",
+      "4200\n",
+      "4300\n",
+      "4400\n",
+      "4500\n",
+      "4600\n",
+      "4700\n",
+      "4800\n",
+      "4900\n",
+      "5000\n",
+      "5100\n",
+      "5200\n",
+      "5300\n",
+      "5400\n",
+      "5500\n",
+      "5600\n",
+      "5700\n",
+      "5800\n"
+     ]
+    }
+   ],
+   "source": [
+    "counter=0\n",
+    "for i in df['cat_num']:\n",
+    "    counter+=1\n",
+    "    if counter % 100 == 0:\n",
+    "        print(counter)\n",
+    "    file_path = '../../../chirp/'+str(i)+'.wav'\n",
+    "    song, sr = librosa.load(file_path)\n",
+    "    buckets = get_periods(song)\n",
+    "    for j in range(0,40):\n",
+    "        df.at[df.loc[df['cat_num']==i].index[0], 'period_'+str(j)] = buckets[j]\n",
+    "        \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "4b777a93-2f11-433c-8d6e-4fe8f6746f24",
    "metadata": {},
