compare with baseline

--- a/KNN_Robert.ipynb
+++ b/KNN_Robert.ipynb
@@ -6,15 +6,15 @@
    "metadata": {},
    "source": [
     "### In this notebook we connstruct a knn model using a test-train-validatin split which achieves:\n",
-    "### 62% accuracy classifying 'fam_or_subfam' (15 possible values) on unseen test data, and\n",
-    "### 87% accuracy classifying 'critter_name' (3 possible values) when trained on 'fam_or_subfam'.\n",
+    "### 62% accuracy (vs. baseline 24%) classifying 'fam_or_subfam' (15 possible values) on unseen test data, and\n",
+    "### 87% accuracy (vs. baseline 67%) classifying 'critter_name' (3 possible values) when trained on 'fam_or_subfam'.\n",
     "### When trained on 'critter_name' alone, our model achieves 89% accuracy, but never guesses 'cicada' (of which we have very few samples).\n",
     "### The latter model would serve as a reasonable classifier for 'cricket' vs 'kaydid', achieving about 89% accuracy,"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 58,
    "id": "e3df4c2a-2429-4fbe-ba37-b33764db25ad",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 59,
    "id": "45a5a0aa-a527-4931-8ec7-eb8348f37711",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 60,
    "id": "4115bf1c-d33f-45e0-a9c2-6f746e2a3a84",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "id": "5e64649d-c4b2-4614-bb3b-324446235b6d",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 62,
    "id": "c2f11ed8-06f7-4b02-8218-1fb5e5229a55",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "id": "7e7d2ecb-d654-4c85-a7e7-c1df65bede26",
    "metadata": {},
    "outputs": [
@@ -266,19 +266,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 64,
    "id": "9b99d0e6-a4a1-4bdb-b8ee-b76dc8b05d4e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.6203389830508474"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 0.6203389830508474 vs. Baseline: 0.24067796610169492\n"
+     ]
     }
    ],
    "source": [
@@ -293,7 +290,10 @@
     "X_test=truncate_mfcc(df=df_test, avg_depth=40,var_depth=40,hs_avg_depth=40,hs_var_depth=40,other_Features=True)\n",
     "y_test=df_test['fam_or_subfam']\n",
     "pred = knn_pipe.predict(X_test)\n",
-    "accuracy_score(pred,y_test)"
+    "pred_baseline = pred.copy()\n",
+    "for i in range(0,len(pred)):\n",
+    "    pred_baseline[i] = 'Gryllinae'\n",
+    "print(f'Test accuracy: {accuracy_score(pred,y_test)} vs. Baseline: {accuracy_score(pred_baseline,y_test)}')"
    ]
   },
   {
@@ -301,12 +301,12 @@
    "id": "bcb05af2-75ee-4d2a-bed9-0cea5610c06d",
    "metadata": {},
    "source": [
-    "### Our knn model with k=5 achieves 62% accuracy identifying 'fam_or_subfam' on unseen test data. Next, we test our model on identifying critter_name: 'cricket', 'kaydid', or 'cicada'."
+    "### Our knn model with k=5 achieves 62% accuracy identifying 'fam_or_subfam' on unseen test data vs. the baseline of 24%. Next, we test our model on identifying critter_name: 'cricket', 'kaydid', or 'cicada'."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "id": "5ba4898b-d85a-4de5-b496-5fddce06a30f",
    "metadata": {},
    "outputs": [],
@@ -333,33 +333,30 @@
    "id": "2b24a4e3-a01d-45fd-9617-dab990fa93f5",
    "metadata": {},
    "source": [
-    "### Our knn model with k=5 achieves 87% accuracy identifying (cricket, kaydid, or cicada) on unseen test data when trained on fam_or_subfam. Below is the confusion matrix."
+    "### Our knn model with k=5 achieves 87% accuracy identifying (cricket, kaydid, or cicada) on unseen test data when trained on fam_or_subfam, vs. the baseline 67% (always guessing cricket). Below is the confusion matrix."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 66,
    "id": "0f13b14f-2060-49e8-8724-fcb134265731",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.8694915254237288"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 0.8694915254237288 vs. Baseline 0.6686440677966101\n"
+     ]
     }
    ],
    "source": [
-    "accuracy_score(fam_to_crit(pd.Series(list(y_test))),fam_to_crit(pd.Series(pred)))"
+    "print(f'Test accuracy: {accuracy_score(fam_to_crit(pd.Series(list(y_test))),fam_to_crit(pd.Series(pred)))} vs. Baseline {accuracy_score(fam_to_crit(pd.Series(list(y_test))),fam_to_crit(pd.Series(pred_baseline)))}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 67,
    "id": "65d4bc1e-90c6-4fb5-aea6-194820c4ffb7",
    "metadata": {},
    "outputs": [],
@@ -369,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 68,
    "id": "b247c506-e9c5-441f-90a7-da97e9952ce7",
    "metadata": {},
    "outputs": [
@@ -429,7 +426,7 @@
        "Actual kaydid                  2                 37               341"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 69,
    "id": "9193f11d-4114-4e78-a7f1-df021fbe0fc8",
    "metadata": {},
    "outputs": [
@@ -525,19 +522,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 70,
    "id": "43734f36-61dd-421a-9379-41fcd9909987",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.8838983050847458"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 0.8838983050847458 vs. Baseline: 0.6686440677966101\n"
+     ]
     }
    ],
    "source": [
@@ -552,7 +546,11 @@
     "X_test=truncate_mfcc(df=df_test, avg_depth=40,var_depth=40,hs_avg_depth=40,hs_var_depth=40,other_Features=True)\n",
     "y_test=df_test['critter_name']\n",
     "pred = knn_pipe.predict(X_test)\n",
-    "accuracy_score(pred,y_test)"
+    "accuracy_score(pred,y_test)\n",
+    "pred_baseline=pred.copy()\n",
+    "for i in range(0, len(pred)):\n",
+    "    pred_baseline[i] = 'cricket'\n",
+    "print(f'Test accuracy: {accuracy_score(pred,y_test)} vs. Baseline: {accuracy_score(pred_baseline,y_test)}')"
    ]
   },
   {
@@ -560,12 +558,12 @@
    "id": "2ce6cd23-1c80-4100-9504-902cf8235a94",
    "metadata": {},
    "source": [
-    "### Our knn model with k=5 achieves 89% accuracy identifying critter_name: 'cricket', 'kaydid', or 'cicada' on unseen test data. Below is the confusion matrix. Interestingly, this model never guesses cicada!"
+    "### Our knn model with k=4 achieves 89% accuracy identifying critter_name: 'cricket', 'kaydid', or 'cicada' on unseen test data, vs. the baseline 67%. Below is the confusion matrix. Interestingly, this model never guesses cicada!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 71,
    "id": "655b2360-ff7d-41d8-85e5-ecbf48b30567",
    "metadata": {},
    "outputs": [],
@@ -575,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 72,
    "id": "032fb058-9ce6-4e34-ba4f-a14be2853037",
    "metadata": {},
    "outputs": [
@@ -635,7 +633,7 @@
        "Actual kaydid                  0                 74               306"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
