--- a/FeedingData.ipynb
+++ b/FeedingData.ipynb
@@ -244,24 +244,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "f26124f8-21be-4623-bd1f-0b03eb96e352",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_hs_avg_var_mfccs(song, sr, n = 40, cutoff = 800):\n",
+    "def get_hs_avg_var_mfccs(song, sr=22050, n = 40, cutoff = 800):\n",
+    "    bound = round(sr/4) #sr/4 gives the half second interval, sr/8 does better in limitted testing\n",
     "    max_ampj = np.argmax(abs(song))\n",
-    "    time_start, time_stop = round(max_ampj - sr/4), round(max_ampj + sr/4)\n",
+    "    time_start, time_stop = max_ampj - bound, max_ampj + bound\n",
     "    if time_start < 0:\n",
-    "        time_start, time_stop = 0, round(sr/2)\n",
+    "        time_start, time_stop = 0, 2*bound\n",
     "    if time_stop > len(song):\n",
-    "        time_start, time_stop = len(song) - round(sr/2), len(song)\n",
+    "        time_start, time_stop = len(song) - 2*bound, len(song)\n",
     "    mfccs = librosa.feature.mfcc(y = song[time_start:time_stop], fmin = cutoff, n_mfcc = n)\n",
     "    mfcc_avg = np.mean(mfccs, axis = 1)\n",
     "    mfcc_var = np.var(mfccs, axis = 1)\n",
     "    if time_start < 0: return (np.full(20, np.nan), np.full(20, np.nan))\n",
     "    else: \n",
     "        return (mfcc_avg, mfcc_var)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2123a61-4a87-4497-a62b-bc9bc160e9cf",
+   "metadata": {},
+   "source": [
+    "### Function to pull all the mfccs from the loudest half second (average over small time samples?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c0382c83-431f-4e67-92d6-601caf7b4241",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_hs_mfccs(song, sr=22050, n = 40, cutoff = 800):\n",
+    "    bound = round(sr/8) #sr/4 gives the half second interval\n",
+    "    max_ampj = np.argmax(abs(song))\n",
+    "    time_start, time_stop = max_ampj - bound, max_ampj + bound\n",
+    "    if time_start < 0:\n",
+    "        time_start, time_stop = 0, 2*bound\n",
+    "    if time_stop > len(song):\n",
+    "        time_start, time_stop = len(song) - 2*bound, len(song)\n",
+    "    return librosa.feature.mfcc(y = song[time_start:time_stop], fmin = cutoff, n_mfcc = n)"
    ]
   },
   {
@@ -312,14 +339,6 @@
     "\n",
     "    return buckets"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d9210e6-c230-4037-aec0-5e999f78d7a2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
