Fixed naming system in Data_Prep

--- a/Data_Prep_for_Feat_Extraction.ipynb
+++ b/Data_Prep_for_Feat_Extraction.ipynb
@@ -62,18 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "025eb6d7-1eb5-40ac-be60-a8191f2a55ab",
    "metadata": {},
    "outputs": [],
    "source": [
     "folder_path = 'FauxRecordings'\n",
     "folder_path_out = 'FauxRecordings_cut'\n",
-    "file_prefix = 'FauxRecording_cut'\n",
     "for i, file in enumerate(os.listdir(folder_path)):\n",
     "    if file.split('.')[1]=='wav':\n",
     "        cut_song, sr = remove_Talking(os.path.join(folder_path,file))\n",
-    "        sf.write(os.path.join(folder_path_out, file_prefix+str(i)+'.wav'), cut_song, sr)"
+    "        sf.write(os.path.join(folder_path_out, file.split('.')[0]+'_cut'+'.wav'), cut_song, sr)"
    ]
   },
   {
@@ -237,7 +236,10 @@
    "id": "98101d10-feb3-43cb-b27f-5d8e283c9f08",
    "metadata": {},
    "source": [
-    "## Removing audio files that have talking (many of the files we recieved from the Macaulay Library of Natural Sounds had human voice). The final faux audio files used for the classifiers are stored in FauxRecordings_NoVoice. In this example, one file is removed."
+    "## Removing audio files that have talking \n",
+    "many of the files we recieved from the Macaulay Library of Natural Sounds had human voice). The final faux audio files used for the classifiers are stored in FauxRecordings_NoVoice. \n",
+    "\n",
+    "In this example, one file is removed."
    ]
   },
   {
@@ -348,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
