--- a/Addtional Resources/EDA.ipynb
+++ b/Addtional Resources/EDA.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Warning, this was made to run on files that have not publically been shared. Any graphs will be removed and you will get an error if you run a cell involving one of these files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The `librosa` package for audio processing and visualisation is used throughout our work. See https://librosa.org/doc/latest/index.html# for more information."
    ]
   },
@@ -27,151 +34,6 @@
     "import scipy\n",
     "import math\n",
     "from sklearn.preprocessing import StandardScaler"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Metadata"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The data we obtained from XXXX came in the form of 12602 .wav files of varying lengths, with an accompanying metadata .csv file containing the following information:\n",
-    "- Biological classification (genus, species).\n",
-    "- Recording information (recordist, date, apparatus used, geographical location, etc.).\n",
-    "\n",
-    "To make the biological information more comprehensive, we added information on subfamilies(??) and families (??) to the metadata file."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "(Add stuff from adding_fam_or_subfam.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Removing Human Speech"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Many of the files contained a human speech component at the beginning (the recordist or cataloguing scientist stating the index number of the recording, for instance). We used the following code to extract the second non-silent chunk of each audio file, which typically contained a useful section of the insect sound recording."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def remove_Talking(f):\n",
-    "    chirp_song, sr = librosa.load(f)\n",
-    "    split=librosa.effects.split(chirp_song, top_db=60)\n",
-    "    chirp_song_split=chirp_song[split[1,0]:split[1,1]]\n",
-    "    if chirp_song_split.shape[0] > 220500:\n",
-    "        chirp_song_split = chirp_song_split[:220500]\n",
-    "    return chirp_song_split"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Further EDA revealed that even after the initial human speech component was eliminated, some audio files still contained human speech. The following code located these audio files and removed them from our analysis."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'torch'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m SAMPLING_RATE \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m16000\u001b[39m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m      4\u001b[0m torch\u001b[38;5;241m.\u001b[39mset_num_threads(\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mIPython\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdisplay\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Audio\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
-     ]
-    }
-   ],
-   "source": [
-    "SAMPLING_RATE = 16000\n",
-    "\n",
-    "import torch\n",
-    "torch.set_num_threads(1)\n",
-    "\n",
-    "from IPython.display import Audio\n",
-    "from pprint import pprint\n",
-    "\n",
-    "model, utils = torch.hub.load(repo_or_dir='snakers4/silero-vad',\n",
-    "                              model='silero_vad',\n",
-    "                              force_reload=True,\n",
-    "                              onnx=False)\n",
-    "\n",
-    "(get_speech_timestamps,\n",
-    " save_audio,\n",
-    " read_audio,\n",
-    " VADIterator,\n",
-    " collect_chunks) = utils\n",
-    "\n",
-    "SAMPLING_RATE=16000\n",
-    "wav = read_audio('E://Chirp_Files/117596.wav', sampling_rate=SAMPLING_RATE)\n",
-    "# get speech timestamps from full audio file\n",
-    "speech_timestamps = get_speech_timestamps(wav, model, sampling_rate=SAMPLING_RATE)\n",
-    "pprint(speech_timestamps)\n",
-    "\n",
-    "import sys\n",
-    "sys.path.append('E://Chirp_Files')\n",
-    "\n",
-    "import os\n",
-    "# assign directory\n",
-    "directory = 'E://Chirp_Files'\n",
-    "no_voice_files=[]\n",
-    "voice_files=[]\n",
-    "\n",
-    "# iterate over files in\n",
-    "# that directory\n",
-    "n = 0\n",
-    "m = 0\n",
-    "for filename in os.listdir(directory):\n",
-    "    f = os.path.join(directory, filename)\n",
-    "    # checking if it is a file\n",
-    "    if os.path.isfile(f):\n",
-    "        n+=1\n",
-    "        m+=1\n",
-    "        wav = read_audio(f, sampling_rate=SAMPLING_RATE)\n",
-    "        speech_timestamps = get_speech_timestamps(wav, model, sampling_rate=SAMPLING_RATE)\n",
-    "        if speech_timestamps == []:\n",
-    "            no_voice_files.append(f)\n",
-    "        else:\n",
-    "            voice_files.append(f)\n",
-    "        if n % 100 == 0:\n",
-    "            print(m)\n",
-    "            n = 0\n",
-    "            df = pd.DataFrame(voice_files)\n",
-    "            df.to_csv(\"voice_files.csv\", header=False, index=False)\n",
-    "            df = pd.DataFrame(no_voice_files)\n",
-    "            df.to_csv(\"no_voice_files.csv\", header=False, index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Out of the 12602 audio files remaining after `remove_Talking` was applied, this reduced the size of our data set to 6122. The final data set used in training and testing the model is `no_voice_files.csv`."
    ]
   },
   {
@@ -515,7 +377,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extracting global? (someone find a better word) features"
+    "## Extracting whole recording features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Average and variance of MFCCs"
    ]
   },
   {
@@ -554,6 +423,42 @@
     "        ct+=1\n",
     "        if ct % 100 == 0:\n",
     "            df.to_csv(\"MLNS_with_mfcc_stats_800_cutoff_05272024.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Average and variance of MFCCs from loudest half second"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another feature we wanted to extract was similarly the mfcc's mean and variance from just the loudest halfsecond. This was done with the following function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_hs_avg_var_mfccs(song, sr=22050, n = 40, cutoff = 800):\n",
+    "    bound = round(sr/4) #sr/4 gives the half second interval, sr/8 does better in limitted testing\n",
+    "    max_ampj = np.argmax(abs(song))\n",
+    "    time_start, time_stop = max_ampj - bound, max_ampj + bound\n",
+    "    if time_start < 0:\n",
+    "        time_start, time_stop = 0, 2*bound\n",
+    "    if time_stop > len(song):\n",
+    "        time_start, time_stop = len(song) - 2*bound, len(song)\n",
+    "    mfccs = librosa.feature.mfcc(y = song[time_start:time_stop], fmin = cutoff, n_mfcc = n)\n",
+    "    mfcc_avg = np.mean(mfccs, axis = 1)\n",
+    "    mfcc_var = np.var(mfccs, axis = 1)\n",
+    "    if time_start < 0: return (np.full(20, np.nan), np.full(20, np.nan))\n",
+    "    else: \n",
+    "        return (mfcc_avg, mfcc_var)"
    ]
   },
   {
@@ -632,6 +537,65 @@
     "pred_freqs = main_freq(chirp_song)\n",
     "print( 'the frequency with the most variance is: ', pred_freqs[0]+800)\n",
     "print( 'the loudest frequency is: ', pred_freqs[1]+800)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Range"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following extracts the variance measure of main frequency above along with a measurement of the range of frequencies which the insect is producting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main_freq_and_range(f, remove_talk, sound_range = .5):\n",
+    "    if remove_talk:\n",
+    "        variance = compute_var(remove_talking_and_low(f))\n",
+    "    else:\n",
+    "        variance = compute_var(remove_low(f))\n",
+    "    maxfreq = np.argmax(variance)\n",
+    "    maxvar = max(variance)\n",
+    "    if variance[maxfreq] != maxvar:\n",
+    "        print ('failed! at file ', f)\n",
+    "        return None\n",
+    "\n",
+    "    #find range of frequencies around the max freq where the animal is loud \n",
+    "    min_freq_range = 0\n",
+    "    max_freq_range = 0\n",
+    "    i=0\n",
+    "    bool_high =True\n",
+    "    bool_low = True\n",
+    "    while bool_high or bool_low:\n",
+    "        if bool_high:\n",
+    "            if maxfreq+i>len(variance)-1:\n",
+    "                max_freq_range = maxfreq+i\n",
+    "                bool_high = False\n",
+    "            elif variance[maxfreq+i] < sound_range*maxvar:\n",
+    "                #print ('max freq range =', (maxfreq+i+64)*librosa.fft_frequencies()[1])\n",
+    "                max_freq_range = maxfreq+i\n",
+    "                bool_high = False\n",
+    "        if bool_low:\n",
+    "            if maxfreq-i<0:\n",
+    "                min_freq_range = 0\n",
+    "                bool_low = False\n",
+    "            elif variance[maxfreq-i] < sound_range*maxvar:\n",
+    "                #print ('min freq range =', (maxfreq-i+64)*librosa.fft_frequencies()[1])\n",
+    "                min_freq_range = maxfreq-i\n",
+    "                bool_low = False\n",
+    "        i = i+1\n",
+    "    size = (max_freq_range+64)/(min_freq_range+64)\n",
+    "    return (maxfreq+64)*librosa.fft_frequencies()[1], size"
    ]
   },
   {
@@ -813,11 +777,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extracting Time Dependent Features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MFCCs over the whole sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mfcc_cut(song, n=20, cutoff = 800):\n",
+    "    #remove bottom 800 hz of frequencies\n",
+    "    return librosa.feature.mfcc(y = song, fmin = cutoff, n_mfcc = n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MFCCs over the loudest half second"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_hs_mfccs(song, sr=22050, n = 40, cutoff = 800):\n",
+    "    bound = round(sr/8) #sr/4 gives the half second interval\n",
+    "    max_ampj = np.argmax(abs(song))\n",
+    "    time_start, time_stop = max_ampj - bound, max_ampj + bound\n",
+    "    if time_start < 0:\n",
+    "        time_start, time_stop = 0, 2*bound\n",
+    "    if time_stop > len(song):\n",
+    "        time_start, time_stop = len(song) - 2*bound, len(song)\n",
+    "    return librosa.feature.mfcc(y = song[time_start:time_stop], fmin = cutoff, n_mfcc = n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LFCCs over the whole sample"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def LFCC_no_low(song, n=20, cutoff = 800, n_fft=2048, hop_length=512):\n",
+    "    D = np.abs(librosa.stft(song, n_fft=n_fft,  hop_length=hop_length))\n",
+    "    cut = int(float(cutoff)/(librosa.fft_frequencies()[1]))\n",
+    "    D = D[cut:]\n",
+    "    #remove bottom 10.7*cutoff frequencies. The number 10.7 is the value of librosa.fft_frequencies()[1]\n",
+    "    DB = librosa.amplitude_to_db(D, ref=np.max)\n",
+    "    \n",
+    "    time = DB.shape[1]\n",
+    "    ans=np.zeros((n,time), dtype=float, order='C')\n",
+    "    for x in range(0,time):\n",
+    "        col = DB[:,x]\n",
+    "        ans[:,x] = (scipy.fft.dct(col)[0:n])\n",
+    "    return ans"
+   ]
   }
  ],
  "metadata": {
